tests/remap/fail/epilog/mustbecalled.ngc
o<mustbecalled> sub
; The remap NGC body runs (there is no prolog); o<mark_body> logs "body executed"
; so checkresult can assert it ran.  The epilog then fails and aborts.
o<mark_body> call
o<mustbecalled> endsub
